Bug #3, fix excerpts (use Jekyll/Liquid `truncatewords: 28`)

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -34,7 +34,7 @@ noscript,
 }
 
 .post-list a.more:after {
-    content: "...";
+    content: "\2026";  //&hellip;
 }
 
 img[ src *= "open-media-player/badge.svg" ] {
